yamls/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: admin-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-react-app
  template:
    metadata:
      labels:
        app: admin-react-app
    spec:
      containers:
        - name: admin-react-app
          image: gcr.io/aquilatrack-5x-dev-demo-test/frontend:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
