yamls/frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: admin-react-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: admin-react-app
